# solidworks_urdf_exporter

./: .gitignore  LICENSE  README.md  SW2URDF.sln
INSTALL/: Install.iss
SW2URDF/: AssemblyExportForm.Designer.cs  AssemblyExportForm.cs  AssemblyExportForm.resx  AssemblyExportFormExtension.cs  AssemblyInfo.cs  AssyExporter.cs  EventHandling.cs  GitVersionInfo.cs  GitVersionInfo.tt  GlobalSuppressions.cs  LogConfiguration.xml  Logger.cs  MathOPS.cs  PMHelper.cs  PMLinkTree.Designer.cs  PMLinkTree.cs  PMPHandler.cs  Package.cs  PartExportForm.Designer.cs  PartExportForm.cs  PartExportForm.resx  PartExporter.cs  ROSFiles.cs  SDF.cs  SW2SDFExporter.cs  SW2URDF.csproj  URDF.cs  (+19 more)
examples/3_DOF_ARM/3_DOF_ARM_description/: CMakeLists.txt  package.xml
examples/3_DOF_ARM/3_DOF_ARM_description/config/: joint_names_3_DOF_ARM_description.yaml
examples/3_DOF_ARM/3_DOF_ARM_description/launch/: display.launch  gazebo.launch
examples/3_DOF_ARM/3_DOF_ARM_description/meshes/: base_link.STL  dist_Link.STL  effector_link.STL  prox_link.STL
examples/3_DOF_ARM/3_DOF_ARM_description/urdf/: 3_DOF_ARM_description.csv  3_DOF_ARM_description.urdf
examples/4_WHEELER/4_WHEELER_description/: CMakeLists.txt  package.xml
examples/4_WHEELER/4_WHEELER_description/config/: joint_names_4_WHEELER_description.yaml
examples/4_WHEELER/4_WHEELER_description/launch/: display.launch  gazebo.launch
examples/4_WHEELER/4_WHEELER_description/meshes/: back_left_link.STL  back_right_link.STL  base_link.STL  front_left_link.STL  front_right_link.STL
examples/4_WHEELER/4_WHEELER_description/urdf/: 4_WHEELER_description.csv  4_WHEELER_description.urdf
(+1032 files in other folders)
